<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6f8"
    tools:context=".SignUpPage">

    <ImageView
        android:id="@+id/singUpImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image_of_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/regUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/permission" />

    <EditText
        android:id="@+id/regEmail"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:background="#F4E7E1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserName" />

    <EditText
        android:id="@+id/regUserName"
        android:layout_width="0dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="21dp"
        android:autofillHints=""
        android:background="#F4E7E1"
        android:hint="@string/reg_username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/regEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpImage" />

    <EditText
        android:id="@+id/regPassword"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:autofillHints=""
        android:background="#F6E7E2"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingEnd="10dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail" />

    <Button
        android:id="@+id/regLoginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="58dp"
        android:backgroundTint="#F48B8B"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/reg_login"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regBtn" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="#7892EF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/reg_btn"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/regLoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>

